# mock-docsearch

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: build-and-push.yaml
