[tool.poetry]
name = "mock-rag-index-image"
version = "0.1.0"
description = ""
authors = ["recalcitrantsupplant <dcchabgood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
